--- a/src/main/resources/templates/trips.html
+++ b/src/main/resources/templates/trips.html
@@ -6,8 +6,21 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
           crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-dark bg-primary">
+        <ul class="navbar-nav">
+            <li>
+                <a class="nav-link" href="/trips">Your trips</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li>
+                <a class="nav-link" href="/"><span class="navbar-text" th:text="${user}"></span> <span class="fa fa-user"></span> Change user</a>
+            </li>
+        </ul>
+    </nav>
     <div class="row p-4">
         <div class="container col p-4">
             <div th:if="${trips != null && !trips.isEmpty()}">
