--- a/src/main/resources/templates/trips.html
+++ b/src/main/resources/templates/trips.html
@@ -46,12 +46,12 @@
                 </div>
                 <div class="form-group">
                     <label>Date from<br>
-                        <input type="date" th:field="*{from}">
+                        <input type="date" th:field="*{from}" class="form-control">
                     </label>
                 </div>
                 <div class="form-group">
                     <label>Date to<br>
-                        <input type="date" th:field="*{to}">
+                        <input type="date" th:field="*{to}" class="form-control">
                     </label>
                 </div>
                 <div class="form-group">
