Fix page displaying

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
         <form action="#" method="POST">
             <div class="form-group">
                 <label>Username
-                    <input type="text" id="user" name="user" class="form-control">
+                    <input type="text" id="user" name="user" required="required" class="form-control">
                 </label>
             </div>
             <input type="submit" value="Check your trips" class="btn btn-primary">
