--- a/src/main/resources/templates/edit-trip.html
+++ b/src/main/resources/templates/edit-trip.html
@@ -21,35 +21,36 @@
             </li>
         </ul>
     </nav>
+    <div class="container-fluid p-4">
+        <div class="container form-group border p-4">
+            <h2>Edit trip</h2>
+            <form th:object="${trip}" method="POST">
+                <div class="form-group">
+                    <label>Trip name<br>
+                        <input type="text" required="required" th:field="*{name}" th:value="${trip.name}" class="form-control">
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>Date from<br>
+                        <input type="date" th:field="*{from}" th:value="${trip.from}" class="form-control" >
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>Date to<br>
+                        <input type="date" th:field="*{to}" th:value="${trip.to}" class="form-control">
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>Other participants (please enter usernames with commas between them)<br>
+                        <input type="text" th:field="*{participants}" th:value="${trip.participants}" class="form-control">
+                    </label>
+                </div>
+                <input type="submit" value="Save" class="btn btn-primary">
+                <input type="reset" value="Reset" class="btn">
+                <a th:href="@{/trips/{tripName}(tripName=${trip.name})}" class="btn">Cancel</a>
 
-    <div class="container form-group border p-4">
-        <h2>Edit trip</h2>
-        <form th:object="${trip}" method="POST">
-            <div class="form-group">
-                <label>Trip name<br>
-                    <input type="text" required="required" th:field="*{name}" th:value="${trip.name}" class="form-control">
-                </label>
-            </div>
-            <div class="form-group">
-                <label>Date from<br>
-                    <input type="date" th:field="*{from}" th:value="${trip.from}" class="form-control" >
-                </label>
-            </div>
-            <div class="form-group">
-                <label>Date to<br>
-                    <input type="date" th:field="*{to}" th:value="${trip.to}" class="form-control">
-                </label>
-            </div>
-            <div class="form-group">
-                <label>Other participants (please enter usernames with commas between them)<br>
-                    <input type="text" th:field="*{participants}" th:value="${trip.participants}" class="form-control">
-                </label>
-            </div>
-            <input type="submit" value="Save" class="btn btn-primary">
-            <input type="reset" value="Reset" class="btn">
-            <a th:href="@{/trips/{tripName}(tripName=${trip.name})}" class="btn">Cancel</a>
-
-        </form>
+            </form>
+        </div>
     </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
