--- a/src/main/resources/templates/trips.html
+++ b/src/main/resources/templates/trips.html
@@ -21,48 +21,50 @@
             </li>
         </ul>
     </nav>
-    <div class="row p-4">
-        <div class="container col p-4">
-            <div th:if="${trips != null && !trips.isEmpty()}">
-                <h2>Your trips</h2>
-                <ul class="list-group">
-                    <li th:each="trip : ${trips}" class="list-group-item">
-                        <a th:href="@{/trips/{tripName}(tripName=${trip.name})}" th:text="${trip.name}"></a>
-                    </li>
-                </ul>
+    <div class="container-fluid">
+        <div class="row p-4">
+            <div class="container col p-4">
+                <div th:if="${trips != null && !trips.isEmpty()}">
+                    <h2>Your trips</h2>
+                    <ul class="list-group">
+                        <li th:each="trip : ${trips}" class="list-group-item">
+                            <a th:href="@{/trips/{tripName}(tripName=${trip.name})}" th:text="${trip.name}"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div th:if="${trips == null || trips.isEmpty()}">
+                    <p>You have no trips</p>
+                </div>
             </div>
-            <div th:if="${trips == null || trips.isEmpty()}">
-                <p>You have no trips</p>
+
+            <div class="container form-group col border p-4">
+                <h2>Add a trip</h2>
+                <form th:action="@{/trips}" th:object="${trip}" method="POST">
+                    <div class="form-group">
+                        <label>Trip name<br>
+                            <input type="text" required="required" th:field="*{name}" class="form-control">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label>Date from<br>
+                            <input type="date" th:field="*{from}" class="form-control">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label>Date to<br>
+                            <input type="date" th:field="*{to}" class="form-control">
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label>Other participants (please enter usernames with commas between them)<br>
+                            <input type="text" th:field="*{participants}" class="form-control">
+                        </label>
+                    </div>
+                    <input type="submit" value="Add" class="btn btn-primary">
+                    <input type="reset" value="Reset" class="btn">
+
+                </form>
             </div>
-        </div>
-
-        <div class="container form-group col border p-4">
-            <h2>Add a trip</h2>
-            <form th:action="@{/trips}" th:object="${trip}" method="POST">
-                <div class="form-group">
-                    <label>Trip name<br>
-                        <input type="text" required="required" th:field="*{name}" class="form-control">
-                    </label>
-                </div>
-                <div class="form-group">
-                    <label>Date from<br>
-                        <input type="date" th:field="*{from}" class="form-control">
-                    </label>
-                </div>
-                <div class="form-group">
-                    <label>Date to<br>
-                        <input type="date" th:field="*{to}" class="form-control">
-                    </label>
-                </div>
-                <div class="form-group">
-                    <label>Other participants (please enter usernames with commas between them)<br>
-                        <input type="text" th:field="*{participants}" class="form-control">
-                    </label>
-                </div>
-                <input type="submit" value="Add" class="btn btn-primary">
-                <input type="reset" value="Reset" class="btn">
-
-            </form>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
