--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,15 +9,25 @@
 </head>
 <body>
     <div class="p-4">
-        <form action="#" method="POST">
+        <form method="POST">
             <div class="form-group">
-                <label>Username
-                    <input type="text" id="user" name="user" required="required" class="form-control">
-                </label>
+                <div class="form-group">
+                    <label>Username
+                        <input type="text" id="user" name="user" required="required" class="form-control">
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label>Password
+                        <input type="password" id="password" name="password" required="required" class="form-control">
+                    </label>
+                </div>
             </div>
-            <input type="submit" value="Check your trips" class="btn btn-primary">
-
+            <input type="submit" value="Log in" formaction="/login" class="btn btn-primary">
+            <input type="submit" value="Create account" formaction="/create" class="btn btn-light">
         </form>
+        <div th:if="${param.error}" class="text-danger">
+            Invalid username or password
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
