--- a/src/main/resources/templates/trips.html
+++ b/src/main/resources/templates/trips.html
@@ -28,7 +28,7 @@
                     <h2>Your trips</h2>
                     <ul class="list-group">
                         <li th:each="trip : ${trips}" class="list-group-item">
-                            <a th:href="@{/trips/{tripName}(tripName=${trip.name})}" th:text="${trip.name}"></a>
+                            <a th:href="@{/trips/{tripId}(tripId=${trip.id})}" th:text="${trip.name}"></a>
                         </li>
                     </ul>
                 </div>
@@ -47,12 +47,12 @@
                     </div>
                     <div class="form-group">
                         <label>Date from<br>
-                            <input type="date" th:field="*{from}" class="form-control">
+                            <input type="date" required="required"  th:field="*{from}" class="form-control">
                         </label>
                     </div>
                     <div class="form-group">
                         <label>Date to<br>
-                            <input type="date" th:field="*{to}" class="form-control">
+                            <input type="date" required="required"  th:field="*{to}" class="form-control">
                         </label>
                     </div>
                     <div class="form-group">
