Add styles to chat

--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -7,6 +7,7 @@
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
           crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/chat.css">
 </head>
 <body>
     <nav class="navbar navbar-dark bg-primary">
@@ -68,7 +69,7 @@
             <div id="chatWindow" class="col p-4 border">
                 <h2>Chat</h2>
 
-                <div class="container border">
+                <div class="container border pre-scrollable" style="height: 20em">
                     <ul id="messageList">
 
                     </ul>
