--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -69,7 +69,7 @@
             <div id="chatWindow" class="col p-4 border">
                 <h2>Chat</h2>
 
-                <div class="container border pre-scrollable" style="height: 20em">
+                <div id="chatArea" class="container border pre-scrollable">
                     <ul id="messageList">
 
                     </ul>
